# Simple-Rust-Projects

./: .gitignore  README.md
caesar-cipher/src/: main.rs
fizz-buzz/src/: main.rs
guess-the-number/: Cargo.toml
guess-the-number/src/: main.rs
hello-world/src/: main.rs
simple-api/: Cargo.toml
simple-api/src/: main.rs
simple-web-scraper/: Cargo.toml
simple-web-scraper/src/: main.rs
tic-tac-toe/src/: main.rs
url-shortener/: Cargo.toml
url-shortener/src/: main.rs
